添加分享功能

--- a/css/resume.css
+++ b/css/resume.css
@@ -82,3 +82,9 @@ div[v-cloak]{
     margin-bottom: 10px;
     width: 100%;
 }
+
+.page__preview, .page__edit{
+    position: fixed;
+    left: 40px;
+    top: 20px;
+}
