--- a/css/login.css
+++ b/css/login.css
@@ -1,4 +1,4 @@
-.app__login{
+.page__login{
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
@@ -9,7 +9,7 @@
     justify-content: center;
     align-items: center;
 }
-.app__login__form{
+.page__login__form{
     background: #fff;
     width: 400px;
     height: 300px;
