--- a/css/signUp.css
+++ b/css/signUp.css
@@ -1,4 +1,4 @@
-.app__signUp{
+.page__signUp{
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
@@ -9,7 +9,7 @@
     justify-content: center;
     align-items: center;
 }
-.app__signUp__form{
+.page__signUp__form{
     background: #fff;
     width: 400px;
     height: 300px;
