--- a/css/print.css
+++ b/css/print.css
@@ -1,14 +1,20 @@
+.page{
+    padding: 50px;
+}
 .page__aside{
     display: none;
 }
-.page__main__resume__skills .remove,
-.page__main__resume__skills .add{
+.page__mode{
     display: none;
 }
-.page__main__resume__projects .remove,
-.page__main__resume__projects .add{
+.page__main{
+    padding: 0;
+    box-shadow: none;
+}
+.page .add,
+.page .remove{
     display: none;
 }
-.page__preview{
+.page__main-content-left .skills > ol > li > .add{
     display: none;
 }
